--- a/MagisterHuiswerk Extension/Resources/popup.html
+++ b/MagisterHuiswerk Extension/Resources/popup.html
@@ -6,6 +6,6 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
-    <strong>Hello World!</strong>
+    <strong>Hallo Magister!</strong>
 </body>
 </html>
